syntax = "proto3";

package ai.lzy.priv.v1;

import "ai/lzy/priv/v1/lzy-disk.proto";

option java_outer_classname = "LDS";
option java_package = "ai.lzy.priv.v1";

service LzyDiskService {
  rpc Create (CreateDiskRequest) returns (CreateDiskResponse);
  rpc Get (GetDiskRequest) returns (GetDiskResponse);
  rpc Delete (DeleteDiskRequest) returns (DeleteDiskResponse);
}

message CreateDiskRequest {
  string label = 1;
  DiskType disk_type = 2;
}

message CreateDiskResponse {
  Disk disk = 1;
}

message GetDiskRequest {
  string disk_id = 1;
}

message GetDiskResponse {
  Disk disk = 1;
}

message DeleteDiskRequest {
  string disk_id = 1;
}

message DeleteDiskResponse {
  Disk disk = 1;
}
